add more shortcuts

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ hr {
   .product-info{
     width: 100%;
   }
-  echo "# product-details-page-html-css-js" >> README.md
+  /* echo "# product-details-page-html-css-js" >> README.md */
   .product-info p{
     width: 100%;
   }
